--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,8 @@
 
 
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="https://psych.ucsf.edu/">Department of Psychiatry</a></li>
-				<li><a href="https://www.ucsf.edu/">UCSF</a></li>
+				<li><a href="https://agronomy.sdau.edu.cn/">山东农业大学农学院</a></li>
+				<li><a href="https://sdau.edu.cn/">SDAU</a></li>
 				<li><a href="{{ site.url }}{{ site.baseurl }}/about">About</a></li>
 				<li><a href="{{ site.url }}{{ site.baseurl }}/recruitment">Recruitment</a></li>
 			</ul>
