--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,7 @@
 		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/contact">Contact</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/JoinUs">Join Us</a></li>
 	  </ul>
 	</div>
 	
