--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,5 +17,5 @@
   </div>
 </div>
 
-<script src="{{ site.url }}{{ site.baseurl }}/js/jquery-3.5.1.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="{{ site.url }}{{ site.baseurl }}/js/bootstrap.min.js"></script>
