--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,10 @@
   <div class="panel-footer">
 	<div class="container-fluid">
 	  <div class="row">
-
+		<figure class="third">
+			<img src="{{ site.url }}{{ site.baseurl }}/images/logopic/Logo_SDAU.png" style="width: 200px">	<img src="{{ site.url }}{{ site.baseurl }}/images/logopic/Logo_SDAU_agr.png" style="width: 200px"> <img src="{{ site.url }}{{ site.baseurl }}/images/logopic/Logo_SDAU_qlxt.png" style="width: 200px"> <img src="{{ site.url }}{{ site.baseurl }}/images/logopic/Logo_BBRF.png" style="width: 200px">
+			</figure>
+			
 
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="https://agronomy.sdau.edu.cn/">山东农业大学农学院</a></li>
